syntax = "proto3";

package api;

message StudyMetaData {
    string id = 1;
    string name = 2;
    string description = 3;
    int64 startDate = 4;
    string status = 5;
    repeated string users = 6;
}

message Empty{
}

message StudyArray{
    repeated StudyMetaData studies = 1;
}

message SignUpData {
    string studyID = 1;
    UserMetaData user = 2;
}


message CreatedTrigger {
    repeated string condition = 1;
    repeated Action action = 2;
    string studyID = 3;

    message Condition {
        repeated string condition = 1;
    }

}

message Action {
    string type = 1;
    string value = 2;
}

message Attributes {
    string userID = 1;
    int32 age = 2;
    string sick = 3;
    int32 weight = 4;
}

message UserMetaData {
    string id = 1;
    int64 timeLastAssigned = 2;
    int64 timeToSend = 3;
}


service Study {
    rpc CreateStudy (StudyMetaData) returns (StudyMetaData);
    rpc GetAll (Empty) returns (StudyArray);
    rpc UpdateStudy (StudyMetaData) returns (StudyMetaData);
    rpc DeleteStudy (StudyMetaData) returns (Empty);
    rpc GetStudy (StudyMetaData) returns (StudyMetaData);

    rpc CreateTrigger (CreatedTrigger) returns (CreatedTrigger) {}
    rpc CheckTrigger (Attributes) returns (stream Action) {}

    rpc UserSignUp (SignUpData) returns (UserMetaData);
}